src/app/pages/latestcourses/latestcourses.page.scss
// .img{
//   height: 100px;
//   width: 100%;
// }
// .latest-courses{
//   padding-bottom: 50px;
//   margin-bottom: 50px;
//   padding-left: 10px;
//   align-content: stretch;
//   display:flex;
//   flex-wrap: wrap;
//   height: 100%;
//   width: auto;
// }
// .fcourse-card{
//   margin: 10px;
//   width: 250px;
//   height: auto;
//   margin-left: 10px;
// }
// .fcourse-card:hover{

//   background-color: coral;
//   .instructor{
//     color: cornsilk;
//   }
// }
.img{
  height: 100px;
  width: 100%;
}
.featured-courses{
  //padding-bottom: 50px;
  margin-bottom: 50px;
  // padding-left: 10px;
  // align-content: stretch;
  // display:flex;
  // flex-wrap: wrap;
  // height: 100%;
  // width: auto;
}
.fcourse-card{
  margin: 10px;
  width: 250px;
//  height: auto;
  margin-left: 10px;
}
.fcourse-card:hover{

  background-color: coral;
  .instructor{
    color: cornsilk;
  }
}

